# MIMEDefang

./: .gitignore  COPYING  Changelog  MANIFEST  MANIFEST.SKIP  Makefile.PL  Makefile.in  README  README.IRIX  README.SECURITY  README.md  action.yml  config.h.in  configure  configure.ac  configure.in  cpanfile  docker-compose-postfix.yml  docker-compose-sendmail.yml  drop_privs.c  dynbuf.c  dynbuf.h  embperl.c  event.c  event.h  event_tcp.c  gen-ip-validator.pl  gen_id.c  md-mx-ctrl.8.in  md-mx-ctrl.c  milter_cap.c  milter_cap.h  mimedefang-filter.5.in  mimedefang-multiplexor.8.in  mimedefang-multiplexor.c  mimedefang-protocol.7.in  mimedefang-release.pl.in  mimedefang.8.in  mimedefang.c  mimedefang.h  (+10 more)
.github/workflows/: main.yml
SpamAssassin/: spamassassin.cf
contrib/: README  README.md  fang.pl
contrib/graphdefang-0.91/: ChangeLog  MANIFEST  Makefile.PL  README  TODO  graphdefang-config-gshield-example  graphdefang-config-mimedefang-example  graphdefang-config-sympa-example  graphdefang.pl  graphdefanglib.pl  reset-max-date.pl
contrib/graphdefang-0.91/event/dovecot/: general
contrib/graphdefang-0.91/event/ipop3d/: general
contrib/graphdefang-0.91/event/kernel/: gshield  ipchains
contrib/graphdefang-0.91/event/mimedefang.pl/: general
contrib/graphdefang-0.91/event/sendmail/: sympa_outgoing
contrib/graphdefang-0.91/event/sympa/: subscribe
contrib/graphdefang-0.91/web/: graphdefang.cgi  index.php
contrib/greylisting/: greylist-mysql.sql  greylist-pgsql.sql  greylist-sqlite.sql  mimedefang-filter
contrib/linuxorg/: README  filter  spam-deliver  spam-trusted-hosts
examples/: README  README.md  example-filter-with-async-checks  filebeat.yml  init-script.in  redhat-logrotate-file  stream-by-domain-filter  suggested-filter-with-async-checks  suggested-minimum-filter-for-windows-clients
lib/MIMEDefang/: Core.pm  RFC2822.pm  Unit.pm
lib/Mail/MIMEDefang/: Actions.pm  Antispam.pm  Core.pm  MIME.pm  Mail.pm  Net.pm  RFC2822.pm  Unit.pm  Utils.pm
modules/: Makefile.PL
modules/lib/Mail/: MIMEDefang.pm
modules/lib/Mail/MIMEDefang/: Actions.pm  Antispam.pm  Antivirus.pm  Async.pm  Authres.pm  BIMI.pm  Core.pm  DKIM.pm  MIME.pm  Mail.pm  Net.pm  RFC2822.pm  SPF.pm  TLSPolicy.pm  Unit.pm  Utils.pm
modules/lib/Mail/MIMEDefang/Async/: Checks.pm  Results.pm
modules/lib/Mail/MIMEDefang/DKIM/: ARC.pm
modules/man/: Mail::MIMEDefang.3p  Mail::MIMEDefang::Actions.3p  Mail::MIMEDefang::Antispam.3p  Mail::MIMEDefang::Antivirus.3p  Mail::MIMEDefang::MIME.3p  Mail::MIMEDefang::Mail.3p  Mail::MIMEDefang::Net.3p  Mail::MIMEDefang::RFC2822.3p  Mail::MIMEDefang::Unit.3p  Mail::MIMEDefang::Utils.3p
redhat/: mimedefang-init.in  mimedefang-spec  mimedefang-spec.in  mimedefang-sysconfig.in  mimedefang.spec
releases/mimedefang-2.84/: Makefile.in  README  README.NONROOT  README.SOPHIE  README.SPAMASSASSIN  README.TRU64  README.VEXIRA  configure.in  drop_privs.c  event.c  event_tcp.h  eventpriv.h  gen_id.c  install-sh  md-mx-ctrl.8.in  milter_cap.c  milter_cap.h  mimedefang-filter.5.in  mimedefang-notify.7.in  notifier.c  syslog-fac.c  watch-mimedefang.8  watch-multiple-mimedefangs.tcl
releases/mimedefang-2.84/contrib/: word-to-html
releases/mimedefang-2.84/contrib/graphdefang-0.91/: graphdefang-config-spamd-example  graphdefang.pl  graphdefanglib.pl  reset-max-date.pl
releases/mimedefang-2.84/contrib/graphdefang-0.91/event/imapd/: general
releases/mimedefang-2.84/contrib/graphdefang-0.91/event/mimedefang.pl/: general
releases/mimedefang-2.84/contrib/graphdefang-0.91/event/sendmail/: reject  spamd  user_unknown
releases/mimedefang-2.84/contrib/graphdefang-0.91/event/spamd/: general
releases/mimedefang-2.84/contrib/graphdefang-0.91/event/sympa/: unsubscribe
releases/mimedefang-2.84/contrib/linuxorg/: spam-deliver  spam-trusted-hosts
releases/mimedefang-2.84/contrib/munin/: mimedefang_munin_plugin
releases/mimedefang-2.84/examples/: stream-by-domain-filter
releases/mimedefang-2.84/redhat/: mimedefang-sysconfig.in  mimedefang.spec
releases/mimedefang-2.84/systemd-units/: mimedefang-multiplexor.service  mimedefang.service
releases/mimedefang-2.84/t/unit/: dates.t
script/: mimedefang-test-mail  mimedefang-util.in
systemd-units/: mimedefang-multiplexor.service  mimedefang.service
t/: actions.t  antispam.t  arc.t  async.t  authres.t  autoscale.t  bimi.t  c_unit.t  core.t  critic.t  dates.t  dkim.t  dockerPostfix.sh  dockerSendmail.sh  filtertest.t  graphdefang.t  headers.t  helo.t  mime.t  mimedefang_test_mail.t  net.t  recipient.t  relay.t  run-tests.sh  sender.t  smtp.t  spf.t  test_safe_append_header.c  tlspolicy.t  utils.t
t/data/: COMMANDS  arc-wrong.eml  arc2.eml  dkim.pem  dkim1.eml  dkim3.eml  dkim_sig.txt  dkim_sig2.txt  dkim_sig2a.txt  exe.eml  gtube.eml  md.conf  mimedefang-async-filter  mimedefang-score-filter  mimedefang-test-filter  multipart.eml  rspamd.conf  sa-test-prefs.cf  tar.eml  tgz.eml  uri-html.eml  uri.eml  zip.eml
t/docker/: docker-compose-postfix.yml  docker-compose-sendmail.yml  dockerPostfix.sh  dockerSendmail.sh
t/docker/postfix/: Dockerfile  supervisord.conf
t/docker/sendmail/: Dockerfile
t/lib/MIMEDefang/: Unit.pm
t/unit/: headers.t  relay.t  sender.t
